--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
-  "name": "hci-assignment-7",
+  "name": "shoppinglist",
   "version": "1.0.0",
-  "description": "TODO desktop application",
+  "description": "Electron shoppinglist desktop app",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=assets/icons/mac/icon.icns --prune=true --out=release-builds",
+    "package-win": "electron-packager . --overwrite --asar=true --platform=win32 --arch=ia32 --icon=assets/icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Shopping List\"",
+    "package-linux": "electron-packager . --overwrite --platform=linux --arch=x64 --icon=assets/icons/png/icon.png --prune=true --out=release-builds"
   },
-  "author": "Collins M.",
-  "license": "UNLICENSED",
+  "author": "Brad Traversy",
+  "license": "ISC",
   "dependencies": {
-    "electron": "^4.1.4"
+    "electron": "^1.7.6"
+  },
+  "devDependencies": {
+    "electron-packager": "^9.0.1"
   }
 }
